--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,99 @@
-/* You can add global styles to this file, and also import other style files */
+body,
+html {
+  margin: 0;
+  height: 100%;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.tool {
+  cursor: url(assets/skull-and-bones.png), auto;
+}
+
+.container {
+  max-width: 850px;
+  margin: auto;
+  margin-bottom: 0;
+  padding: 100px 10px;
+}
+
+.btn-primary,
+.btn-secondary,
+.btn-thirdary {
+  border: 0;
+  cursor: pointer;
+  font-weight: 600;
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.btn-secondary {
+  background-color: rgba(255, 117, 117, 0.075);
+  color: hsl(0, 100%, 66%);
+}
+
+.bounce {
+  animation: bounce 0.4s;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+
+  25% {
+    /* 5px Up */
+    transform: scale(1.1);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  75% {
+    /* 5px down */
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: translateY(1);
+  }
+}
+
+.btn-secondary:hover {
+  background-color: rgba(255, 117, 117, 0.15);
+}
+
+.btn-primary {
+  background-color: rgba(117, 117, 255, 0.075);
+  color: rgb(80, 80, 255);
+  cursor: pointer;
+}
+
+.btn-thirdary {
+  background-color: rgba(37, 253, 84, 0.1);
+  color: rgb(5, 153, 0);
+  cursor: pointer;
+}
+
+.btn-thirdary:hover {
+  background-color: rgba(37, 253, 84, 0.2);
+}
+
+.btn-primary:hover {
+  background-color: rgba(117, 117, 255, 0.15);
+}
+
+/* Utility classes */
+.mr-10 {
+  margin-right: 10px;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.mb-60 {
+  margin-bottom: 60px;
+}
