--- a/src/app/rat/rat.component.html
+++ b/src/app/rat/rat.component.html
@@ -1,7 +1,1 @@
-<span
-  [class.no-cursor]="!hasTool"
-  [class.transparent]="dead"
-  (mouseover)="onHover()"
-  class="symbol"
-  >{{ ratSymbol }}</span
->
+<span [class.no-cursor]="!hasTool" [class.transparent]="dead" (mouseover)="onHover()" class="symbol">{{ ratSymbol }}</span>
