--- a/src/app/campaign/campaign.component.html
+++ b/src/app/campaign/campaign.component.html
@@ -26,7 +26,7 @@
   <h1 style="margin-bottom: 0">Nice Job!</h1>
   <h2 style="margin-bottom: 15px; margin-top: 10px">
     You just killed
-    <span style="color: red; font-weight: 700">{{ rats.length }}</span> rats
+    <span style="color: red; font-weight: 700">{{ rats.length }}</span> rats.
   </h2>
   <button (click)="handleRepeatClick()" class="btn-primary mr-10">Increase by 10 and repeat</button>
 </section>
