--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<!-- Fireworks -->
+<div class="fireworks-container">
+  <div class="before"></div>
+  <div class="after"></div>
+</div>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
