--- a/src/app/campaign/campaign.component.html
+++ b/src/app/campaign/campaign.component.html
@@ -9,7 +9,7 @@
       {{ hasTool ? 'Drop Poison' : 'Pickup Poison' }}
     </button>
     <button (click)="handleResetClick()" class="btn-primary mr-10">Reset current level</button>
-    <button *ngIf="highscore > rats.length" (click)="handleContinueFromHighscore()" class="btn-thirdary">Continue from your highscore ({{ highscore }} rats)</button>
+    <button *ngIf="highscore > MAX_RATS_COUNT" (click)="handleContinueFromHighscore()" class="btn-thirdary">Continue from your highscore ({{ highscore }} rats)</button>
   </div>
 
   <app-rat
@@ -24,12 +24,11 @@
 
 <!-- Game Over -->
 <section *ngIf="gameOver">
-  <h1 style="margin-bottom: 0">Nice Job!</h1>
+  <h1 *ngIf="MAX_RATS_COUNT !== 190" class="mb-0">Nice Job!</h1>
+  <h1 *ngIf="MAX_RATS_COUNT === 190" class="mb-0">You are Amazing!</h1>
   <h2 style="margin-bottom: 15px; margin-top: 10px">
     You just killed
-    <span style="color: red; font-weight: 700">{{ rats.length }}</span> rats.
+    <span style="color: red; font-weight: 700">{{ MAX_RATS_COUNT }}</span> rats.
   </h2>
   <button (click)="handleRepeatClick()" class="btn-primary mr-10">Increase by 10 and repeat</button>
 </section>
-
-<button class="btn-settings" (click)="handleSettingsClick()">⚙️</button>
